--- a/app/src/main/res/layout/background_main.xml
+++ b/app/src/main/res/layout/background_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:background="#000000"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     >
 
@@ -12,16 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
-        android:layout_margin="30dp" >
+        android:layout_margin="10dp" >
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@android:drawable/ic_dialog_alert"
+            android:src="@drawable/count"
             android:id="@+id/imageView" />
 
         <TextView
             android:id="@+id/txv_background_count"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="40sp"
@@ -34,14 +34,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:textColor="#ffffff"
         android:text="@string/kilometer"
         android:gravity="right|center"
-        android:layout_margin="30dp"
+        android:layout_margin="10dp"
         android:singleLine="true"
         android:id="@+id/txv_background_distence" />
-
 
 
 </LinearLayout>
