--- a/app/src/main/res/layout/dblist_row.xml
+++ b/app/src/main/res/layout/dblist_row.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@drawable/border"
     android:layout_gravity="center"
+    android:padding="10dp"
     android:orientation="horizontal">
 
     <TextView
@@ -13,37 +14,41 @@
         android:minWidth="100dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:text="2002.22.22"
+        android:text=""
         android:gravity="right"
 
         />
-    <ImageView
-        android:layout_width="wrap_content"
 
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_dialog_alert"
-         />
+    <View
+        android:layout_width="10dp"
+        android:layout_height="0dp"/>
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="33dp"
+        android:src="@drawable/count"
+        android:id="@+id/imageView2" />
 
     <TextView
         android:id="@+id/txv_count"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:text="0"
-        android:gravity="center"
+        android:singleLine="true"
+        android:gravity="right"
 
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:text="@string/kilometer"
-        android:gravity="center"
+        android:gravity="right"
         android:id="@+id/txv_distence" />
 
 
