--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@android:drawable/ic_dialog_alert"
+            android:src="@drawable/count"
             android:id="@+id/imageView" />
 
         <TextView
@@ -38,6 +38,10 @@
         android:layout_margin="30dp"
         android:id="@+id/txv_distence" />
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="20dp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,14 +50,23 @@
         android:textColor="#ffffff"
         android:gravity="center"
         />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="10dp"/>
+
     <TextView
         android:id="@+id/txv_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textColor="#ffffff"
         android:gravity="center"
         />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="40dp"/>
 
     <Button
         android:id="@+id/btn_start"
